[package]
name = "rust-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.7.5"
block-modes = "0.8.1"
hex-literal = "0.3.4"
hex = "0.4"
indicatif = "0.17.7"
windows = { version = "0.48", features = ["Win32_System_Threading", "Win32_System_ProcessStatus"] }
chrono = "0.4.41"
rand = "0.9.1"
sysinfo = "0.35.2"
pre = "0.2.1"
x25519-dalek = "2.0.1"
aes-gcm = "0.10.3"
aead = "0.5.2"
base64 = "0.22.1"
rand_core = "0.9.3"
hkdf = "0.12.4"
sha2 = "0.10.9"
anyhow = "1.0.98"
plonky2 = "1.1.0"
