[package]
name = "PRE_reEncrypt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
plonky2 = { git = "https://github.com/mir-protocol/plonky2", branch = "main", features = ["parallel"] }
ark-bls12-381 = { version = "0.5.0", features = ["curve"] }
ark-ff = "0.5.0"
ark-ec = "0.5.0"
ark-poly = "0.5.0"
rand = "0.9.1"
rand_chacha = "0.9.0"
ark-groth16 = { version = "0.5.0", features = ["std"] }
ark-std = "0.5.0"
ark-relations = "0.5.1"
ark-r1cs-std = "0.5.0"
ark-snark = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.8.2"
bincode = "2.0.1"
